--- a/public/global.css
+++ b/public/global.css
@@ -5,14 +5,15 @@ html, body {
 }
 
 body {
-	color: #333;
+	color: var(--colors-text);
+	background: var(--colors-background);
 	margin: 0;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 a {
-	color: rgb(0,100,200);
+	color: var(--colors-accent);
 	text-decoration: none;
 }
 
@@ -21,7 +22,7 @@ a:hover {
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: var(--colors-accent);
 }
 
 label {
